--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -4,7 +4,7 @@ import Button from "./Button.astro"
 ---
 <div class="container">
     <div class="form">
-    <form action="contact_form" name="contact_form" method="post" data-netlify="true" netlify-honeypot="bot-field">
+    <form action="contact_form" name="contact_form" method="post" netlify netlify-honeypot="bot-field">
         <input type="hidden" name="contact_form" value="contact_form">
 
         <div class="flex">
