--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -56,7 +56,6 @@ import Button from "./Button.astro"
 <style> 
 
 form {
-    padding: var(--gap4);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,9 +63,7 @@ form {
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    width:100%
 }
 input, textarea {
     width: 100%;
