--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ import Button from "../components/Button.astro";
 			<Button size="lg" link="/booking" variant="secondary">Læs mere</Button>
 		</div>
 		<div class="medium">
-			<Button size="me" link="/events" variant="secondary">Se events</Button>
+			<Button size="me" link="/booking" variant="secondary">Læs mere</Button>
 		</div>
 		<div class="small">
 			<Button size="sm" link="/booking" variant="secondary">Læs mere</Button>
