placeholder billede erstattet

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -45,7 +45,7 @@ import Video from "../components/Video.astro";
               <p>Vi sætter en stor ære i at skabe lige præcis det DU gerne vil have og elsker at høre alle de ideer folk har til events, shows, koncerter eller noget helt fjerde - derfor er vores kunder og samarbejdspartnere dem der er i fokus 100%, når vi arbejder på at skabe noget fedt sammen.</p>
     </div>
     <div class="line"></div>
-    <img src="/img/instrumenter-frame.webp" alt="">
+    <img src="/img/scene_billede_frame.webp" alt="">
     </article>
 </section>
 <section class="kontakt">
