--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -22,10 +22,10 @@ import Button from "../components/Button.astro";
       Lad os gøre jeres næste arrangement til en uforglemmelig oplevelse!</p>
       </div>
       <div class="button large" id="jump">
-      <Button size="lg" link="/kontakt" variant="secondary">Læs mere</Button>
+      <Button size="lg" link="/kontakt" variant="secondary">Kontakt os</Button>
       </div>
       <div class="button small">
-        <Button size="sm" link="/kontakt" variant="secondary">Læs mere</Button>
+        <Button size="sm" link="/kontakt" variant="secondary">Kontakt os</Button>
         </div>
   </div>
   <img src="/img/instrumenter-frame.webp" alt="Instrumenter fra en koncert">
