--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -141,10 +141,10 @@ import Button from "../components/Button.astro";
 	
 	 //Web 
   // create
-  let la = gsap.matchMedia();
+  let mm = gsap.matchMedia();
 
   // add a media query. When it matches, the associated function will run
-  la.add("(min-width: 431px)", () => {
+  mm.add("(min-width: 431px)", () => {
 
 	gsap.registerPlugin(ScrollTrigger);
 	
