--- a/src/components/TestimonialsSlider.astro
+++ b/src/components/TestimonialsSlider.astro
@@ -85,13 +85,20 @@
 
         .carousel {
             margin-top: 20px;	
+            height: 300px;
+        }
+
+        .carousel-inner {
+            height: 300px;
         }
         .carousel .prev, .carousel .next {
-        padding-inline: 20px;
+        padding-inline: 15px;
+        padding-block: 120px;
     }
 
     .testimonial p {
-        width: 15rem;
+        width: 19rem;
+        height: 10rem;
     }
     }
 </style>
