--- a/src/components/NaasteArtist.astro
+++ b/src/components/NaasteArtist.astro
@@ -114,11 +114,12 @@ const {image, img, name, alt, slug } = Astro.props
 
     .phone {
         display: flex;
+        filter:  grayscale(100%);
     }
 
     .tekst {
         position: absolute;
-        top: 60%;
+        top: 65%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
