--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -133,7 +133,7 @@ mm.add("(min-width: 431px)", () => {
         font-weight: 400;
     }
 
-    a {
+    .sti a {
         font-size: var(--Label-large);
         font-weight: 900;
         color: var(--color-text-body);
@@ -147,7 +147,7 @@ mm.add("(min-width: 431px)", () => {
         align-items: center;
     }
 
-    a:hover {
+   .sti a:hover {
         color: var(--color-background-button-hover);
         background-color: var(--color-background-stroke);
         outline-style: solid;
@@ -202,8 +202,8 @@ mm.add("(min-width: 431px)", () => {
         column-gap: var(--gap3);
         padding-top: 20px;
       }
-      a {
-        font-size: var(--Label-small);
-      }
+      .sti a {
+        font-size: 0.47813rem;
+    }
 }
 </style>
