--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -244,7 +244,7 @@ mm.add("(min-width: 431px)", () => {
         margin-bottom: 80px;
     }
 
-    a {
+    .sti a {
         font-size: var(--Label-large);
         font-weight: 900;
         color: var(--color-text-body);
@@ -258,7 +258,7 @@ mm.add("(min-width: 431px)", () => {
         align-items: center;
     }
 
-    a:hover {
+    .sti a:hover {
         color: var(--color-background-button-hover);
         background-color: var(--color-background-stroke);
         outline-style: solid;
@@ -417,8 +417,8 @@ mm.add("(min-width: 431px)", () => {
     padding-inline: var(--gap4);
     }
 
-    a {
-        font-size: var(--Label-small);
+    .sti a {
+        font-size: 0.47813rem;
     }
     .text h3 {
         font-size: 13.33px;
