--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -121,7 +121,7 @@ article {
         margin-top: 80px;
         margin-bottom: 80px;
     }
-        a {
+        .sti a {
         font-size: var(--Label-large);
         font-weight: 900;
         color: var(--color-text-body);
@@ -135,7 +135,7 @@ article {
         align-items: center;
     }
 
-    a:hover {
+   .sti a:hover {
         color: var(--color-background-button-hover);
         background-color: var(--color-background-stroke);
         outline-style: solid;
@@ -257,9 +257,9 @@ article {
 		margin-top: 60px;
 		margin-bottom: 60px;
 	}
-        a {
-            font-size: var(--Label-small);
-        }
+    .sti a {
+        font-size: 0.47813rem;
+    }
         article {
             padding-inline: var(--gap4);
         }
