--- a/src/components/ArtistCard.astro
+++ b/src/components/ArtistCard.astro
@@ -30,6 +30,11 @@ const {image, name, insta, face} = Astro.props;
         height: auto;
     }
 
+    img {
+      filter: grayscale(100%);
+      width: 20rem;
+    }
+
     h3{
             background-color: var(--color-background-label);
             color: var(--color-text-h3-tertiary);
