--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -249,6 +249,7 @@ grid-template-columns: 1fr 1fr;
 
       .col_2 h4{
         font-size: var(--Headline4-small);
+        padding-bottom: 5px;
       }
       .col_3 p {
         font-size: var(--Body-small);
@@ -260,6 +261,7 @@ grid-template-columns: 1fr 1fr;
 
       .col_3 h4{
         font-size: var(--Headline4-small);
+        padding-bottom: 5px;
       }
 
       .col_4 {
