--- a/src/pages/artist/[slug].astro
+++ b/src/pages/artist/[slug].astro
@@ -297,6 +297,7 @@ import MainLayout from "../../layouts/MainLayout.astro";
 
   .phone {
     display: flex;
+    filter: grayscale(100%);
   }
 
     img{
