--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -476,8 +476,11 @@ import Button from "../components/Button.astro";
 .testimonial{
 	border: 2px solid var(--color-background-stroke);
 	padding: 4rem 2rem;
-
 }
+
+.stars img {
+		width: 5%;
+	}
 
 }
 
@@ -565,6 +568,10 @@ import Button from "../components/Button.astro";
 	width: auto;
 	margin-inline:auto;
 }
+
+.stars img {
+		width: 10%;
+	}
 }
 
 
