--- a/src/components/ArtistCard.astro
+++ b/src/components/ArtistCard.astro
@@ -125,7 +125,7 @@ const {image, name, insta, face} = Astro.props;
     }
 
     h3{
-        font-size: var(--Headline4-small);
+        font-size: 0.895rem;
     }
     .social-links i {
           font-size: var(--Headline2-small);
@@ -133,11 +133,10 @@ const {image, name, insta, face} = Astro.props;
         }
 
         .social-links{
- padding-top: 2rem;
- gap: 1rem;
+        padding-top: 2rem;
+        gap: 1rem;
 
     }
-  
   
 }
     
