--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -248,14 +248,6 @@ import Button from "../components/Button.astro";
     width: 576px;
   }
 
-  .large {
-    display: flex;
-    width: 100%;
-    height: 3px;
-    align-items: center;
-    flex-shrink: 0;
-  }
-
   .small, .medium {
     display: none;
   }
@@ -280,7 +272,16 @@ import Button from "../components/Button.astro";
       border-top: 2px solid var(--color-background-stroke);
     border-bottom: 2px solid var(--color-background-stroke);
     }
+
+    .large {
+    display: flex;
+    width: 65%;
+    height: 3px;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
   }
+
 
   @media (max-width: 1024px) {
     article{
