--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -184,7 +184,7 @@ article {
         flex-wrap: wrap;
 		column-gap: var(--gap6);
         row-gap: var(--gap7);
-		justify-content: flex-start;
+		justify-content: space-between;
         padding-top: 40px;
 	}
 
