--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,8 +24,9 @@ import Video from "../components/Video.astro";
             </div>
                 <p>Mit navn er Torsten og jeg er manden bag Kanonproduktion.
                   Jeg er 56 år gammel, men har ikke tænkt mig at stoppe.</p>
-                 <p>Selvom det godt kan se sådan ud, så har jeg ikke altid arbejdet i dette fag, og det lå faktisk heller ikke i kortene. Da min far var landmand i Slagelse lå det nok mere til højrebenet, at det var landmand jeg skulle være, og tog også en landmandsuddannelse - men det var nu ikke helt min fars 180 grise og 200 tønder land der trak så forfærdeligt meget i mig.</p> 
-                 <p> Jeg startede derfor inden for denne branche med at lave lokal radio og derefter startede Kanonproduktion i 2001. </p>
+                 <p>Selvom det godt kan se sådan ud, så har jeg ikke altid arbejdet i dette fag, og det lå faktisk heller ikke i kortene. Min far var nemlig landmand i Slagelse, så det skulle jeg da også være - men det var nu ikke helt min fars 180 grise og 200 tønder land der trak så forfærdeligt meget i mig.</p>
+                 <p>Jeg forelskede mig istedet for eventbranchen, og hende opgiver jeg simpelthen ikke. Jeg startede derfor med lokal radio, og nu står jeg her, som stolt ejer af Kanonproduktion</p> 
+                
         </div>
     </article>
 </section>
