--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,7 +25,7 @@ import Video from "../components/Video.astro";
                 <p>Mit navn er Torsten og jeg er manden bag Kanonproduktion.
                   Jeg er 56 år gammel, men har ikke tænkt mig at stoppe.</p>
                  <p>Selvom det godt kan se sådan ud, så har jeg ikke altid arbejdet i dette fag, og det lå faktisk heller ikke i kortene. Min far var nemlig landmand i Slagelse, så det skulle jeg da også være - men det var nu ikke helt min fars 180 grise og 200 tønder land der trak så forfærdeligt meget i mig.</p>
-                 <p>Jeg forelskede mig istedet for eventbranchen, og hende opgiver jeg simpelthen ikke. Jeg startede derfor med lokal radio, og nu står jeg her, som stolt ejer af Kanonproduktion</p> 
+                 <p>Jeg forelskede mig istedet for eventbranchen, og hende opgiver jeg simpelthen ikke. Jeg startede derfor med lokal radio, og nu står jeg her, som stolt ejer af Kanonproduktion.</p> 
                 
         </div>
     </article>
