--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -21,8 +21,8 @@ import Button from "./Button.astro"
     
         <div class="flex">
             <div class="navn">
-                <label for="navn">Navn <span class="req">*</span></label>
-                <input type="text" id="navn" name="navn" placeholder="Dit navn..." required>
+                <label for="fname">Navn <span class="req">*</span></label>
+                <input type="text" id="fname" name="fname" placeholder="Dit navn..." required>
             </div>
     
             <div class="telefon">
