--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -17,6 +17,7 @@ import KontaktFormular from "../components/KontaktFormular.astro";
 
   h1 {
     padding-inline: var(--gap11);
+    margin-bottom: 40px;
   }
 
 	section {
